--- a/index.html
+++ b/index.html
@@ -322,6 +322,8 @@
 
     </div>
 
+    <div class="remove">-</div>
+
     <script src="https://cdn.jsdelivr.net/npm/html2canvas"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
