--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               placeholder="Enter Here"
             />
 
-            <div class="container text-center mt-3" id="langAddBtn">
+            <div class="mt-3 container text-center" id="langAddBtn">
               <button onclick="addNewLang()" class="btn btn-primary btn-sm">
                 Add
               </button>
@@ -313,7 +313,7 @@
         <button onclick="downloadCV()">Download CV</button>
       </div>
 
-      <div class="desireCV">
+      <div class="desireCV" onclick="">
 
       </div>
 
@@ -322,7 +322,7 @@
 
     </div>
 
-    <div class="remove">-</div>
+    <!-- <div class="remove">-</div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/html2canvas"></script>
     <script
